# starlive

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: app_factory.py  basic_app.py
